--- a/package.json
+++ b/package.json
@@ -14,5 +14,20 @@
     "@types/node": "18.11.3",
     "@types/react": "^18.0.21",
     "typescript": "4.8.4"
-  }
+  },
+  "name": "next-use",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SoraKumo001/next-use.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SoraKumo001/next-use/issues"
+  },
+  "homepage": "https://github.com/SoraKumo001/next-use#readme",
+  "description": ""
 }
