--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "^12.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "^13.0.0",
+    "react": "^18.3.0-next-fecc288b7-20221025",
+    "react-dom": "^18.3.0-next-fecc288b7-20221025"
   },
   "devDependencies": {
-    "@types/node": "18.11.3",
-    "@types/react": "^18.0.21",
+    "@types/node": "18.11.7",
+    "@types/react": "^18.0.24",
     "typescript": "4.8.4"
   },
   "name": "next-use",
